# huaweicloud-iot-device-sdk-c

./: .gn  BUILD.gn  LICENSE  Makefile  README.md  README_CN.md
conf/: bsrootcert.pem  rootcert.pem
demos/bootstrap_demo/: bootstrap.c  bootstrap.h  bootstrap_groups_test.c  bootstrap_test.c
demos/bridge_demo/: bridge_client_test.c  bridge_server_test.c  bridge_tcp_protocol.c  bridge_tcp_protocol.h
demos/device_demo/: basic_test.c  command_test.c  device_config_test.c  device_rule_test.c  file_up_down_test.c  gmssl_test.c  log_report_test.c  message_test.c  mqttV5_test.c  ota_test.c  properties_test.c  reconnection_test.c  remote_login_test.c  report_anomaly_test.c  report_device_info_test.c  shadow_test.c  sys_hal_test.c  time_sync_test.c
demos/gateway_demo/: gateway_client_test.c  gateway_server_test.c  generic_tcp_protocol.c  generic_tcp_protocol.h
demos/softBus_demo/: soft_bus_data_process.c  soft_bus_data_process.h  soft_bus_test.c
doc/: generic_protocol.md
doc/doc_cn/: generic_protocol.md
generatingLib/: README.md  generateOpenssl.sh  generateZlib.sh
include/: dconncaseone_interface.h
include/agentlite/: file_manager.h  hw_type.h  iota_bridge.h  iota_cfg.h  iota_datatrans.h  iota_defaultCallback.h  iota_device_info.h  iota_error_type.h  iota_init.h  iota_login.h
include/base/: hmac_sha256.h  mqtt_base.h
include/libssh/: libssh.h
include/nopoll/: nopoll_config.h  nopoll_win32.h
include/protocol/: generic_tcp_protocol.h
include/service/: base.h  callback_func.h  data_trans.h  login.h  soft_bus_datatrans.h  soft_bus_init.h  subscribe.h
include/service/bridge/: bridge_topic_data.h
include/service/detect_anomaly/: detect_anomaly.h  report_anomaly.h
include/service/device_rule/: rule_action.h  rule_condition.h  rule_execute.h  rule_execution.h  rule_info.h  rule_manager.h  rule_parse.h  rule_parser.h  rule_trans.h  rule_util.h
include/service/sys_hal/: sys_hal.h
include/tunnel/: ssh_client.h  wss_client.h
include/util/: json_util.h  log_util.h  mqttv5_util.h  string_util.h
lib/: README.md  libcrypto.so.1.1  libpaho-mqtt3as.so.1  libssl.so.1.1  libz.so.1
src/: BUILD.gn  dconncaseone_interface.c
src/agentlite/: BUILD.gn  file_manager.c  iota_bridge.c  iota_datatrans.c  iota_defaultCallback.c  iota_init.c  iota_login.c  iota_payload.c  iota_payload.h
src/base/: BUILD.gn  hmac_sha256.c  mqtt_base.c
src/bootstrap_demo/: BUILD.gn  bootstrap_demo.c
src/demo/: agent_lite_demo.c
src/device_demo/: BUILD.gn  device_demo.c
src/gateway_demo/: BUILD.gn  gateway_client_demo.c  gateway_server_demo.c  generic_tcp_protocol.c
src/service/: BUILD.gn  base.c  callback_func.c  data_trans.c  login.c  soft_bus_datatrans.c  soft_bus_init.c  subscribe.c
src/service/bridge/: BUILD.gn  bridge_topic_data.c
src/service/detect_anomaly/: BUILD.gn  detect_anomaly.c  report_anomaly.c
src/service/device_rule/: BUILD.gn  rule_action.c  rule_condition.c  rule_execute.c  rule_execution.c  rule_info.c  rule_manager.c  rule_parse.c  rule_parser.c  rule_print.c  rule_trans.c  rule_util.c
src/service/sys_hal/: BUILD.gn  sys_hal.c  sys_hal_imp.c
src/tunnel/: BUILD.gn  ssh_client.c  wss_client.c
src/util/: BUILD.gn  json_util.c  log_util.c  mqttv5_util.c  string_util.c
